public/styles.css
/* Base Styles */
/* device agnostic baseline styles */

body {
  font-family: sans-serif;
  color: #523E25;
  font-size: 1em;
  line-height: 1.4;
  margin: 0;
  padding: 0;
}

img,
obj,
video {
    max-width: 100%;
    height: auto;
}

/* visually hidden classes */
/* used for skip link */

.visuallyhidden {
  border: 0;
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.visuallyhidden:focus {
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}


.wrap {
  margin: 0 auto;
  padding: 1em 1em;
}

h2 {
  margin-top: 0;
}

/* link styles */
a:link,
a:visited {
  color: #A05035
}

a:hover,
a:focus {
  color: #7F0000;
}

/* container styles */
.header-container {
  background: #DDC83A;
}

.countdown-container {
  background: #F2F2EC;
}

.registration-container {
  background: #A05035;
  color: #F2F2EC;
}

.footer-container {
  background: #F2F2EC;
}

/* navigation styles */

/* navigation */
.site-nav {
  background-color: #A05035;
}

.nav-list {
  list-style: none;
}

.nav-list a:link,
.nav-list a:visited {
  color: #F2F2EC;
}

.nav-list a:hover,
.nav-list a:focus {
  text-decoration: none;
}

/* form styles */

fieldset {
  border: none;
  padding: 0;
  margin: 0;
}

legend {
  margin-bottom: 1em;
}


@media (max-width: 600px) {

  .nav-list a {
    display: block;
    text-decoration: none;
  }

  .nav-list li {
    text-align: center;
    border-bottom: 1px solid #F2F2EC;
    padding: 1em;
  }

  .nav-list li:hover {
    border-bottom: 1px dashed #F2F2EC;
  }
}

@media (min-width: 601px) {
  /* Large device/browser styles */

  /* layout */
  .wrap {
    max-width: 1100px;
  }

  /* header */
  .header-container {
    text-align: center;
  }

  /* navigation list */
  .nav-list li {
    display: inline-block;
    padding: 0 1em;
  }

  /* register button styles */
  .btn {
    display: block;
    max-width: 300px;
    margin: 0 auto;
    text-align: center;
    font-size: 1.6em;
    padding: 1em;
    text-decoration: none;
  }

  .btn:link,
  .btn:visited {
    color: #F2F2EC;
    background: #BA816D;
  }

  .btn:hover,
  .btn:focus {
    background: #A05035;
  }

  /* countdown display */
  .countdown-list {
    text-align: center;
    width: 100%;
  }

  .countdown-list li {
    display: inline-block;
    padding: 0 3em;
  }

  .countdown-time {
    font-size: 2.25em;
    font-weight: bold;
    display: block;
  }

  /* registration container */
  .registration-container {
    padding: 2em 0;
  }

  /* form fields */
  input {
    font-size: 1.125em;
    padding: 10px;
  }

  .submit-button {
    background-color: #F2F2EC;
    color: #A05035;
    border: none;
    font-size: 1.125em;
    padding: 12px;
    cursor: pointer;
  }

  .submit-button:hover,
  .submit-button:focus {
    background-color: #e6e6e7;
  }

}

@media (min-width: 850px) {
  /* Larger device/browser styles */

}

@media (min-width: 1100px) {
  /* Largest device/browser styles */
}

